upd: добавил ссылки (нужно ещё лейбл добавить во второй главе)

--- a/part/concept.tex
+++ b/part/concept.tex
@@ -37,7 +37,7 @@
     \item \textbf{Авторизация} - это предоставление прав (или привилегий), позволяющих субъекту иметь законный доступ к объектам системы после успешной аутентификации \autocite[сс. 15-18]{Skakun}.
 \end{itemize}
 
-Понимание этих основополагающих понятий является ключом к анализу угроз, который мы рассмотрим в следующем разделе, и к построению моделей безопасности, которые будут детально изучены в главе 2.
+Понимание этих основополагающих понятий является ключом к анализу угроз, который мы рассмотрим в следующем разделе, и к построению моделей безопасности, которые будут детально изучены в главе \ref{chap:theoretical_foundations}.
 
 \subsection{Угрозы безопасности БД: общие и специфичные}
 Интуитивное понимание угрозы безопасности можно сформулировать как нарушение великолепной тройки: конфиденциальности, целостности и доступности. 
@@ -214,7 +214,7 @@
     \item \textbf{Пользовательская целостность (User-Defined Integrity).} Включает специфические бизнес-правила, которые не могут быть выражены стандартными ограничениями. Такие правила обычно реализуются с помощью триггеров.
 \end{itemize}
 
-Мы уже обсуждали основные угрозы целостности в разделе \ref{ugr:cel}. Для их предотвращения и применяются перечисленные механизмы. Теоретической основой для реализации более сложных политик целостности служат такие модели, как модель \textbf{Кларка-Вильсона} и модель \textbf{Биба}, которые будут рассмотрены в главе 1.8.
+Мы уже обсуждали основные угрозы целостности в разделе \ref{ugr:cel}. Для их предотвращения и применяются перечисленные механизмы. Теоретической основой для реализации более сложных политик целостности служат такие модели, как модель \textbf{Кларка-Вильсона} и модель \textbf{Биба}, которые будут рассмотрены в главе \ref{sec:multilevel_models}.
 
 \subsection{Аудит безопасности}
 
@@ -385,7 +385,7 @@
 
 \clearpage
 
-\subsection{Модели и принципы многоуровневой защиты}
+\subsection{Модели и принципы многоуровневой защиты}\label{sec:multilevel_models}
 Как уже было сказано, безопасность системы зависит от защиты на всех уровнях: от сетевой инфраструктуры до соответствия нормативным требованиям. Анализ успешных решений в области информационной безопасности позволяет сформулировать несколько ключевых принципов, которыми следует руководствоваться при проектировании систем защиты \autocite{Smirnov2007}:
 \begin{itemize}
 	\item \textbf{Экономическая оправданность механизмов защиты.} Проект должен обеспечивать необходимый уровень безопасности, оставаясь в рамках бюджета.
@@ -405,7 +405,7 @@
     \item \textbf{Мандатная модель доступа (Mandatory Access Control, MAC).} Доступ определяется на основе сопоставления меток безопасности, присвоенных субъектам (уровень допуска) и объектам (уровень конфиденциальности). Правила задаются централизованно и не могут быть изменены владельцами объектов. Именно эта модель реализует классическую многоуровневую безопасность (Multilevel Security, MLS).
     \item \textbf{Ролевая модель доступа (Role-Based Access Control, RBAC).} Права доступа группируются в роли в соответствии с должностными обязанностями в организации (например, «бухгалтер», «менеджер»). Пользователям назначаются роли, и они получают все привилегии, связанные с этой ролью.
 \end{itemize}
-Каждая из этих моделей имеет свои преимущества и недостатки и будет подробно рассмотрена в главе 2.
+Каждая из этих моделей имеет свои преимущества и недостатки и будет подробно рассмотрена в главе \ref{chap:theoretical_foundations}.
 
 \subsection{Процедуры и формализация контроля доступа}
 Управление доступом представляет собой стратегию обеспечения безопасности информации, осуществляемую через контроль и регулирование использования ресурсов системы \autocite[с. 36]{Skakun}. Идейно этот процесс распадается на два ключевых вопроса: \textit{кому} и \textbf{что} мы будем разрешать?
