upd: Добавил лейбл

--- a/part/basis/basis.tex
+++ b/part/basis/basis.tex
@@ -1,4 +1,4 @@
-\section{Теоретические основы безопасности в СУБД}
+\section{Теоретические основы безопасности в СУБД}\label{chap:theoretical_foundations}
 
 \input{criteria}
 \input{models}
