Upd: Вернул душные определения) Переработал главу 1.2, поправил кавычки.

--- a/part/concept.tex
+++ b/part/concept.tex
@@ -16,8 +16,41 @@
 
 При формулировке основных понятий и определений будем полагать, что защищаемым объектом является не сама БД или экспертная система, а компьютерная система (КС) в целом. Понятие защиты применимо не только к сохраняемым данным. Бреши в системе защиты могут возникать и в других частях системы, например, линии связи, что в свою очередь, подвергает опасности и собственно БД. Следовательно, защита БД должна охватывать используемое оборудование, программное обеспечение, персонал и собственно данные \autocite[сс. 15-18]{Skakun}. 
 
-Информационная безопасность, согласно ГОСТ Р 50922—2006, – это состояние защищенности информации и поддерживающей инфраструктуры от случайных или преднамеренных воздействий естественного или искусственного характера, которое чревато нанесением ущерба владельцам или пользователям информации и поддерживающей инфраструктуры \autocite{GOST50922}. В основе обеспечения безопасности лежит управление тремя ключевыми свойствами данных, известными как \textbf{триада безопасности CIA} (Confidentiality, Integrity, Availability):
+Информационная безопасность – состояние рассматриваемой КС, при которой она, с одной стороны, способна противостоять дестабилизирующему воздействию внешних и внутренних информационных угроз, а с другой – функционирование системы и сам факт ее наличия не создают угроз для ее пользователей, для внешней среды и для элементов самой КС \autocite[сс. 15-18]{Skakun}.
 
+Защита информации - комплекс мероприятий, направленных на обеспечение информационной безопасности (целостности, доступности, конфиденциальности) \autocite[сс. 15-18]{Skakun}.
+
+Защищаемая информация – информация, являющаяся предметом собственности и подлежащая защите в соответствии с требованиями правовых документов или требованиями, устанавливаемыми собственником информации \autocite[сс. 15-18]{Skakun}.
+
+Защищаемая информационная система – система, предназначенная для обработки защищаемой информации с требуемым уровнем ее защищенности \autocite[сс. 15-18]{Skakun}.
+
+Система называется безопасной, если она управляет доступом к информации так, что только должным образом авторизованные лица или же действующие от их имени процессы получают право читать, писать, создавать и удалять информацию \autocite[сс. 15-18]{Skakun}. 
+
+Система считается доверенной, если она с использованием достаточных аппаратных и программных средств обеспечивает одновременную обработку информации разной степени секретности группой пользователей без нарушения прав доступа \autocite[сс. 15-18]{Skakun}.
+
+Основными критериями оценки надежности являются политика безопасности и гарантированность \autocite[сс. 15-18]{Skakun}.
+
+Политикой безопасности называют качественное описание комплекса организационно-технологических и программнотехнических мер по обеспечению защиты данных в КС, включает в себя анализ возможных угроз и выбор соответствующих мер противодействия. Выбор конкретных механизмов обеспечения безопасности системы производится в соответствии с политикой безопасности \autocite[сс. 15-18]{Skakun}.
+
+Гарантированность - это пассивный элемент защиты, который отображает меру доверия, которая может быть оказана архитектуре и реализации системы. Гарантированность можно определить тестированием системы в целом и отдельных ее компонентов.
+
+Субъектом доступа называется активный компонент системы, который может стать причиной инициализации потока информации или изменения состояния системы. Субъект представляет собой лицо или процесс, действия которого регламентируются правилами разграничения доступа \autocite[сс. 15-18]{Skakun}. 
+
+Объект доступа - пассивный компонент системы, хранящий, принимающий или передающий информацию, доступ к которой регламентируется правилами разграничения доступа. Объектами доступа в БД является практически все, что содержит конечную информацию: таблицы (базовые или виртуальные), представления, а также более мелкие элементы данных: столбцы и строки таблиц и отдельные поля \autocite[сс. 15-18]{Skakun}. 
+
+Правила разграничения доступа - совокупность правил, регламентирующих права субъектов доступа к объектам доступа. Контроль доступа обязательно включает идентификацию и аутентификацию всех субъектов и их процессов и разграничение полномочий субъектов по отношению к объектам с последующей обязательной проверкой введенных полномочий \autocite[сс. 15-18]{Skakun}.
+
+Идентификация - присвоение объектам и субъектам доступа идентификатора и (или) сравнение предъявляемого идентификатора с перечнем присвоенных идентификаторов \autocite[сс. 15-18]{Skakun}. 
+
+Аутентификация  - проверка принадлежности субъекту доступа предъявленного им идентификатора, подтверждение подлинности \autocite[сс. 15-18]{Skakun}. 
+
+После идентификации и проверки подлинности устанавливается сфера действий субъекта (доступные ему ресурсы КС). Эту процедуру называют авторизацией \autocite[сс. 15-18]{Skakun}.
+
+Авторизация - это предоставление прав (или привилегий), позволяющих их владельцу иметь законный доступ к системе или ее объектам \autocite[сс. 15-18]{Skakun}. 
+
+Привилегия доступа - совокупность прав доступа субъекта доступа \autocite[сс. 15-18]{Skakun}. 
+
+Вышеприведенные понятия в большей степени связаны с организацией защиты конфиденциальных данных. Наряду с защитой конфиденциальных данных в понятие безопасности данных входит также обеспечение целостности и доступности данных \autocite[сс. 15-18]{Skakun}. В основе обеспечения безопасности лежит управление этими тремя ключевыми свойствами данных:
 \begin{itemize}
     \item \textbf{Конфиденциальность} - это свойство информации быть известной только допущенным и прошедшим проверку субъектам системы \autocite[сс. 15-18]{Skakun}. Это гарантия того, что данные не будут раскрыты неавторизованным лицам.
     \item \textbf{Целостность данных} - свойство данных сохранять точность и непротиворечивость независимо от внесенных изменений. Зависит от способности информационной системы обеспечить неизменность данных в условиях случайного и (или) преднамеренного искажения (разрушения) \autocite[сс. 15-18]{Skakun}.
@@ -44,14 +77,63 @@
 \begin{grayquote}
 \textbf{Угроза информационной безопасности} - это осуществляемое или потенциально осуществимое воздействие на компьютерную систему, которое прямо или косвенно может нанести ущерб безопасности информации \autocite[с. 19]{Skakun}.
 \end{grayquote}
-Угрозы принято классифицировать по разным признакам. \textbf{По источнику возникновения} они делятся на внутренние (ошибки персонала, сбои оборудования) и внешние (хакерские атаки, вирусы) \autocite{Ytebov2008}. \textbf{По объекту воздействия} угрозы можно разделить на уровни технологического стека, в котором они возникают. Такой подход особенно важен для комплексной защиты, так как уязвимость на одном уровне может скомпрометировать всю систему.
+По источнику воздействия на КС угрозы разделяются на внутренние и внешние \autocite{Ytebov2008}.
 
-\subsubsection{Классификация угроз по уровням}
-Угрозы безопасности компьютерной системы (КС) можно условно разделить на три основных уровня \autocite{Lihonosov2011}:
+Внешними дестабилизирующими факторами, создающими угрозы безопасности функционированию систем КС, являются:
 \begin{itemize}
-	\item \textbf{На уровне сети}. Сюда относятся атаки на сетевые протоколы (TCP/IP, OLE DB, ODBC), перехват трафика, атаки на рабочие станции и серверы, а также эксплуатация уязвимостей в Activex-объектах и URL.
-	\item \textbf{На уровне операционной системы (ОС)}. Угрозы для аппаратного и программного обеспечения, на котором работает СУБД. Это включает атаки на файлы самой базы данных, журналы транзакций и резервные копии, а также на системные службы (MSSQLServer, TNSListener и т. д.).
-	\item \textbf{На уровне БД}. Угрозы, направленные непосредственно на объекты внутри самой базы данных: пользователей, их роли и права, диаграммы, представления, таблицы и хранимые процедуры.
+	\item умышленные, деструктивные действия лиц с целью искажения, уничтожения или хищения программ, данных и документов системы, причиной которых являются нарушения информационной безопасности защищаемого объекта
+	\item искажения в каналах передачи информации, поступающей от внешних источников, циркулирующих в системе и передаваемой потребителям, а также недопустимые значения и изменения характеристик потоков информации из внешней среды и внутри системы~\label{pon:pot}
+	\item сбои и отказы в аппаратуре вычислительных средств
+	\item вирусы и иные деструктивные программные элементы, распространяемые с использованием систем телекоммуникаций, обеспечивающих связь с внешней средой или внутренние коммуникации распределенной системы баз данных
+	\item изменения состава и конфигурации комплекса взаимодействующей аппаратуры системы за пределы, проверенные при тестировании или сертификации системы
+\end{itemize}
+
+Внутренними источниками угроз безопасности КС являются:
+\begin{itemize}
+	\item ошибки проектирования КС
+	\item ошибки при определении условий и параметров функционирования внешней среды, в которой предстоит использовать информационную систему и, в частности, программно-аппаратные средства защиты данных
+	\item ошибки и несанкционированные действия пользователей, административного и обслуживающего персонала в процессе эксплуатации системы
+	\item недостаточная эффективность используемых методов и средств обеспечения информационной безопасности в штатных или особых условиях эксплуатации системы
+\end{itemize}
+
+Наиболее опасными являются угрозы, вызванные человеческой деятельностью, именно им уделяется особое внимание.
+
+Выше перечислены угрозы на всех уровнях КС~\label{pon:urovs}. Под уровнями будем подразумевать следующее разбиение:
+\begin{itemize}
+	\item На уровне сети
+	\begin{itemize}
+		\item Activex-объект
+		\item Интерфейсы: OLE DB, ADO, ODBC, JDBC
+		\item Протоколы: TCP/IP, IPX/SPX, Named Pipes, Multiprotocol
+		\item Рабочие станции
+		\item Серверы
+		\item Маршрут
+		\item URL
+	\end{itemize}
+	\item На уровне ОС
+	\begin{itemize}
+		\item Аппаратное обеспечение
+		\item Программное обеспечение
+		\item Файлы базы данных
+		\item Файлы журнала транзакций
+		\item Файлы резервного копирования
+		\item Transact-SQL, PLSQL
+		\item Службы: MSSQLServer, SQLServerАgent, TNSListener и т. д.
+	\end{itemize}
+	\item На уровне БД
+	\begin{itemize}
+		\item Пользователи
+		\item Роли
+		\item Роли приложения
+		\item Диаграммы
+		\item Представления
+		\item Таблицы
+		\item Хранимые процедуры
+		\item Определения по умолчанию
+		\item Правила
+		\item Функции
+		\item Тип данных
+	\end{itemize}
 \end{itemize}
 
 \subsubsection{Специфичные угрозы для СУБД}
@@ -420,7 +502,7 @@
 Эти три процедуры являются обязательным элементом любой защищенной ИС, реализуя первый рубеж защиты информации.
 
 \subsubsection{Что: Права доступа и матрица доступа}
-После того как субъект авторизован, система должна знать, какие именно действия (`что`) ему разрешено выполнять с различными объектами. Эти разрешения формализуются в виде прав доступа. Классическим способом теоретического представления этих прав является \textbf{матрица доступа} \autocite{Tanenbaum}.
+После того как субъект авторизован, система должна знать, какие именно действия ("что") ему разрешено выполнять с различными объектами. Эти разрешения формализуются в виде прав доступа. Классическим способом теоретического представления этих прав является \textbf{матрица доступа} \autocite{Tanenbaum}.
 
 Матрица доступа — это абстрактная модель, представляющая собой таблицу, где:
 \begin{itemize}
@@ -434,6 +516,6 @@
     \item \textbf{Списки контроля доступа (Access Control Lists, ACL),} хранящиеся с объектами (поколоночное хранение матрицы).
     \item \textbf{Списки возможностей (Capability Lists),} хранящиеся с субъектами (построчное хранение матрицы).
 \end{itemize}
-Тем не менее, матрица доступа остается фундаментальной концепцией, которая наглядно формализует политику безопасности, определяя, `что` именно может делать `кто` в системе.
+Тем не менее, матрица доступа остается фундаментальной концепцией, которая наглядно формализует политику безопасности, определяя, "что" именно может делать "кто" в системе.
 
 \clearpage
