--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2400,3 +2400,37 @@
     url = {https://research.google.com/archive/spanner-osdi2012.pdf},
     urldate = {2025-06-08}
 }
+
+
+@online{KasperskyIoC,
+    url = {https://encyclopedia.kaspersky.ru/glossary/indicator-of-compromise-ioc/},
+    urldate = {2025-06-09}
+}
+
+
+@article{bertino,
+  title={Database security—Concepts, approaches, and challenges},
+  author={Bertino, Elisa and Sandhu, Ravi},
+  journal={IEEE Transactions on Dependable and Secure Computing},
+  volume={2},
+  year={2005},
+  doi={10.1109/TDSC.2005.9}
+}
+
+@book{kamra,
+  title={Detecting anomalous access patterns in relational databases},
+  author={Kamra, Ashish and Terzi, Evimaria and Bertino, Elisa},
+  booktitle={Proceedings of the 13th International Conference on Very Large Data Bases (VLDB)},
+  year={2006},
+  organization={VLDB Endowment},
+}
+
+
+@article{debar,
+  title={A revised taxonomy for intrusion-detection systems},
+  author={Debar, Herv{\'e} and Dacier, Marc and Wespi, Andreas},
+  journal={Annales des t{\'e}l{\'e}communications},
+  volume={55},
+  year={2000},
+  doi={10.1007/BF02994709}
+}
