--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2009,7 +2009,7 @@
 
 
 @online{KasperskyIoC,
-    title = {Indicator of Compromise, IoC}
+    title = {Indicator of Compromise, IoC},
     url = {https://encyclopedia.kaspersky.ru/glossary/indicator-of-compromise-ioc/},
     urldate = {2025-06-09}
 }
