--- a/part/distributed.tex
+++ b/part/distributed.tex
@@ -457,7 +457,7 @@ DCE (Distributed Computing Environment)~--- это система програм
 
 \subsubsection{Защищенные протоколы фиксации}
 
-Некоторые примеры с ссылками на описание проткоолов:
+Некоторые примеры с ссылками на описание протоколов:
 
 \begin{itemize}
     \item BFT-2PC \autocite{BFT-2PC}
@@ -516,7 +516,7 @@ DBMS)  предложены некоторые решения. Однако эт
 В распределённых системах достижение консенсуса осложнено теоретическими ограничениями: 
 
 \begin{itemize} 
-    \item \textbf{Теорема FLP} (Фischer, Lynch, Paterson, 1985): В асинхронной системе с хотя бы одним отказом узла консенсус невозможен, если возможна произвольная задержка сообщений \autocite{Fischer1985}. 
+    \item \textbf{Теорема FLP} (Fischer, Lynch, Paterson, 1985): В асинхронной системе с хотя бы одним отказом узла консенсус невозможен, если возможна произвольная задержка сообщений \autocite{Fischer1985}. 
     \item \textbf{CAP-теорема} (Brewer, 2000): Система может гарантировать только два из трёх свойств: согласованность (Consistency), доступность (Availability), устойчивость к разделению (Partition tolerance) \autocite{Brewer2012}. 
 \end{itemize}
 
@@ -532,7 +532,7 @@ DBMS)  предложены некоторые решения. Однако эт
 \paragraph{Примеры алгоритмов консенсуса}~\\ 
 
 \begin{itemize} 
-    \item \textbf{Paxos}: cуть алгоритма заключается в процессе, в ходе которого участники системы (proposers, acceptors и learners) взаимодействуют по строго определенным правилам, 
+    \item \textbf{Paxos}: суть алгоритма заключается в процессе, в ходе которого участники системы (proposers, acceptors и learners) взаимодействуют по строго определенным правилам, 
     чтобы прийти к единому согласованному решению. Основные этапы алгоритма включают предложение значения (proposal), голосование за предложение и подтверждение(acceptance) предложенного 
     значения большинством узлов \autocite{paxos}. 
     \item \textbf{Raft}: для обеспечения консенсуса среди серверов выбирается лидер, который принимает запросы на изменение данных и координирует их распространение на остальные узлы. 
@@ -559,7 +559,7 @@ DBMS)  предложены некоторые решения. Однако эт
 
 \paragraph{Алгоритмы шардинга} ~\\
 Ранее уже упоминалось о двух основных вида шардинга: \textit{горизонтальный} и \textit{вертикальный}. Стоит их разобрать по подробнее и
-рассказать и про другие виды шардирования, такие как шадинг на основе каталогов и шардинг на основе ключей.
+рассказать и про другие виды шардирования, такие как шардинг на основе каталогов и шардинг на основе ключей.
 
 \paragraph{Горизонтальное шардирование} ~\\
 В этом методе мы разбиваем данные на основе диапазонов заданного значения, присущего каждой сущности. Допустим, у вас
@@ -989,9 +989,9 @@ CRDT обладают следующими характеристиками:
     \item State-based CRDTs. При обновлении данных, репликам посылается полная локальная копия данных, после чего реплики локально у себя сливают эти изменения воедино, причем операция слияния (merge) обладает свойствами ассоциативности, коммутативности и идемпотентности, что позволяет уменьшить требования к каналам связи между репликами. 
     \item Delta-state CRDTs - оптимизированный вариант state-based CRDTs, когда посылаются только недавно примененные изменения вместо полной копии состояния.
 \end{itemize}
-Помимо алгоритмов, важную роль играют процессы сходимости между нодами. Для сходимости в случае Operation-based CRDTs, каждая нода обязана получить ровно одно сообщение с фукнцией обновления и для этого необходим надежный протокол доставки. В случае с State-base CRDTs, наличие коммутативного и идемпотентного оператора слияния позволяет утверждать, что данные постепенно сойдутся в любом случае, что дает нам право не беспокоиться о протоколе доставки. 
+Помимо алгоритмов, важную роль играют процессы сходимости между нодами. Для сходимости в случае Operation-based CRDTs, каждая нода обязана получить ровно одно сообщение с функцией обновления и для этого необходим надежный протокол доставки. В случае с State-base CRDTs, наличие коммутативного и идемпотентного оператора слияния позволяет утверждать, что данные постепенно сойдутся в любом случае, что дает нам право не беспокоиться о протоколе доставки. 
 \paragraph{Примеры реализации}
-На сегодняшний день известных CRDT не так много, одни из них: G-Counter (Grow only counter), PN-Counter (positive-negative counter), G-Set (grow only set) и несколько других типов. Основной особенностью всех этих типов данных является, то что каждая коллекция поддерживает узкий набор операций. А чтобы добавить например вычитание (некоммутативную операцию) в PN-Counter необходимо прибегать к хитрости и использовать два ворастающих счетчика типа G-Counter. Рассмотрим пример реалиции G-Counter-а. 
+На сегодняшний день известных CRDT не так много, одни из них: G-Counter (Grow only counter), PN-Counter (positive-negative counter), G-Set (grow only set) и несколько других типов. Основной особенностью всех этих типов данных является, то что каждая коллекция поддерживает узкий набор операций. А чтобы добавить например вычитание (некоммутативную операцию) в PN-Counter необходимо прибегать к хитрости и использовать два возрастающих счетчика типа G-Counter. Рассмотрим пример реализации G-Counter-а. 
 \begin{figure}[H]
     \centering
     \includegraphics[width=100mm]{assets/distributed/G-Counter}
@@ -1043,7 +1043,7 @@ CRDT обладают следующими характеристиками:
 	Каждый контейнер имеет собственную файловую систему, сетевой стек 
 	и процессы, что обеспечивает его полную изоляцию от других контейнеров 
 	и базовой системы. Процессы, запущенные в одном контейнере не смогут влиять и даже смотреть на то, что запущенно в другом контейнере или на хосте, а для получения таковой функциональности придётся приложить дополнительные усилия. 
-    Обеспечивается такая изоляция средствами ядра Linux, а именно~--- \textbf{пространствами имён} (namespaces) и \textbf{контрольными группами} (control group). Первые отвечают за то, чтоб котнейнеры
+    Обеспечивается такая изоляция средствами ядра Linux, а именно~--- \textbf{пространствами имён} (namespaces) и \textbf{контрольными группами} (control group). Первые отвечают за то, чтоб контейнеры
     не подглядывали друг за другом; а вторые распределяют и ограничивают используемые контейнерами ресурсы хоста, гарантируют не только то, что контейнеры не будут голодать по памяти, CPU, дисковым операциям,
     но и то, что контейнеры не отберут все ресурсы у других потребителей.
 
@@ -1059,11 +1059,11 @@ CRDT обладают следующими характеристиками:
     Часть Docker, позволяющая верифицировать целостность образов и их авторов путём проверки подписей называется Docker Content Trust (DCT). Сами образы при этом хранятся в \href{https://docs.docker.com/registry/}{Docker registry} (DockerHub~--- пример общедоступного registry).
     В репозитории (например ubuntu, mongo), где хранятся образы, создаётся набор ключей, которыми автор может подписывать по желанию теги этого репозитория, при это можно даже выпустить две версии одного тэга:
     подписанную и неподписанную. Пользователь репозитория может фильтровать теги доступные к загрузке~--- можно запретить использование неподписанных тегов. ~\\
-    Доверие достигается следующим образом. У автора есть оффлайн-ключ (рутовый) и сертификат, с помощью которого создаются ключи и сертификаты тега (delegation keys) (обладание такими ключами позволяет вливать новые образы в репозиторий). \autocite{DockerSecurityTrust} У ползователя же на машинке лежит
+    Доверие достигается следующим образом. У автора есть оффлайн-ключ (рутовый) и сертификат, с помощью которого создаются ключи и сертификаты тега (delegation keys) (обладание такими ключами позволяет вливать новые образы в репозиторий). \autocite{DockerSecurityTrust} У пользователя же на машинке лежит
     CA сертификат, которым подписан registry сертификат, а также собственный сертификат пользователя и ключ (последние нужны для того, чтоб registry мог верифицировать пользователя). \autocite{DockerSecurityCertificates}
 
     \textbf{PKI в docker swarm} ~\\
-    Ноды в swarm'е используют TLS для аутентификации, авторизации и шифрования соединения с другими нодами. Когда созадётся управляющая нода (manager), она генерирует CA сертификат и ключевую пару для
+    Ноды в swarm'е используют TLS для аутентификации, авторизации и шифрования соединения с другими нодами. Когда создаётся управляющая нода (manager), она генерирует CA сертификат и ключевую пару для
     дальнейшего общения с остальными. Также генерируются два токена~--- для добавляемых в swarm нод-работников и нод-управляющих. Токен является комбинацией открытого ключа сертификата и секрета. Открытый ключ используется подключаемой нодой для валидации сертификата управляющей ноды, а секрет
     используется управляющей нодой для валидации подключаемой ноды. Далее управляющая выдаёт подключённой ноде новый сертификат, подписанный CA сертификатом. Таким образом устанавливается PKI, и далее ноды могут проверять, действительно ли с ними общаются разрешённые ноды. \autocite{DockerSwarmPKI}
 
